--- a/header.html
+++ b/header.html
@@ -4,6 +4,7 @@
 	<title><?php echo $titulo_pagina; ?></title>	
 	<link rel="stylesheet" href="includes/style.css" type="text/css" media="screen" />
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <?php session_start(); ?>
 </head>
 <body>
 	<div id="header">
@@ -16,7 +17,9 @@
 			<li><a href="equipe.php">Equipe</a></li>
             <li><a href="categorias.php">Categorias</a></li>
 			<li><a href="registro.php">Registrar</a></li>
-			<li><a href="login.php">Login</a></li>
+			<li><?php if(isset($_SESSION['usuario_id'])){
+            			echo '<a href="logout.php">Logout</a>';}else{ echo '<a href="login.php">Login</a>';}
+                        ?></li>
 			
 		</ul>
 	</div>
